# ScuffedMinecraft

./: CMakeLists.txt  README.md
.github/workflows/: build-ci-man.yml  build-ci.yml
WillowVoxEngine/include/WillowVox/core/: Logger.h
WillowVoxEngine/include/WillowVox/world/: TerrainGen.h
WillowVoxEngine/src/: WillowVoxStubs.cpp
include/: StandardWorldStub.h
src/: main.cpp
